Refreshed ui and animations

--- a/index.html
+++ b/index.html
@@ -142,20 +142,13 @@
 
             <nav>
                 <a id="logo" href="./index.html">pathfinding visualizer</a>
-                <button id="visualize" class="custom-btn">Visualize</button>
+                <button id="visualize" class="custom-btn">Visualize Bi-Directional</button>
                 <ul class="nav-menu">
-                    <li>
-                        <a id="clear-path" href="#">Clear path</a>
-                    </li>
-                    <li>
-                        <a id="clear-board" href="#">Clear board</a>
-                    </li>
-                    <li>
-                        <a id="generate-maze" href="#">Generate Maze</a>
-                    </li>
-
+                    <li><a id="clear-path" href="#" class="custom-btn">Clear path</a></li>
+                    <li><a id="clear-board" href="#" class="custom-btn">Clear board</a></li>
+                    <li><a id="generate-maze" href="#" class="custom-btn">Generate Maze</a></li>
                     <li id="pixel" class="drop-box">
-                        <a class="drop-toggle" href="#">Pixel<span class="carret"></span></a>
+                        <a class="drop-toggle custom-btn" href="#">Pixel<span class="carret"></span></a>
                         <ul class="drop-menu">
                             <li><a href="#">14px</a></li>
                             <li><a href="#">16px</a></li>
@@ -166,18 +159,16 @@
                             <li><a href="#">26px</a></li>
                         </ul>
                     </li>
-
                     <li id="speed" class="drop-box">
-                        <a class="drop-toggle" href="#">Speed<span class="carret"></span></a>
+                        <a class="drop-toggle custom-btn" href="#">Speed<span class="carret"></span></a>
                         <ul class="drop-menu">
                             <li><a href="#">Slow</a></li>
                             <li><a href="#" class="active">Normal</a></li>
                             <li><a href="#">Fast</a></li>
                         </ul>
                     </li>
-
                     <li id="algo" class="drop-box">
-                        <a class="drop-toggle" href="#">Algorithms <span class="carret"></span></a>
+                        <a class="drop-toggle custom-btn" href="#">Algorithms<span class="carret"></span></a>
                         <ul class="drop-menu">
                             <li><a href="#" class="active">BFS</a></li>
                             <li><a href="#">Bi-Directional BFS</a></li>
@@ -187,10 +178,7 @@
                             <li><a href="#">A* Algorithm</a></li>
                         </ul>
                     </li>
-
-
                 </ul>
-
             </nav>
 
             <!-- ================ GUIDE BAR ============== -->
