--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Path finder</title>
     <link rel="stylesheet" href="/style/style.css">
-    <link rel="stylesheet" href="style/utility.css">
+    <link rel="stylesheet" href="/style/utility.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 </head>
@@ -230,10 +230,10 @@
 
 
 
-<script src="js/utils.js"></script>
-<script src="js/controlls.js"></script>
-<script src="js/board.js"></script>
-<script src="js/searchAlgo.js"></script>
-<script src="js/mazeGen.js"></script>
-<script src="js/main.js"></script>
+<script src="/js/utils.js"></script>
+<script src="/js/controlls.js"></script>
+<script src="/js/board.js"></script>
+<script src="/js/searchAlgo.js"></script>
+<script src="/js/mazeGen.js"></script>
+<script src="/js/main.js"></script>
 </html>
